--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Lunches</title>
+<head>
+	<meta charset="UTF-8">
+		{{!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> --}}
+		<title>MVC Burgers</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		{{!-- <script src="/assets/js/cats.js"></script> --}}
 	</head>
 	<body>
 		{{{ body }}}
