connected front-end styles.css and burgers.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,9 @@
-<h1>Cats!</h1>
 
-<h2>Burgers to Devour!</h2>
-
+ <br><br>
+<header class="container d-flex justify-content-center" >
+ 
+  <h1>Eat-DA-Burger</h1>
+</header>
 
 <ul>
   {{#each burgers}}
