--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,55 @@
-
- <br><br>
-<header class="container d-flex justify-content-center" >
- 
-  <h1>Eat-DA-Burger</h1>
+<br><br><br><br>
+<header class="container d-flex justify-content-center">
+  <h1>Eat - DA - Burger</h1>
 </header>
 
-<ul>
-  {{#each burgers}}
-  <li>{{burger_name}}</li>
-  {{/each}}
-</ul>
+<br><br><br><br>
 
-{{!-- <ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> cats/cat-block sleep=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
 
-<h2>Cats that are sleepy!</h2>
+<section class="container">
+  <div class="col-md-12">
+    <div class="row justify-content-center">
 
-<ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
-    {{/if}}
-  {{/each}}
-</ul> --}}
 
-<h2>Add a Burger</h2>
-<form class="create-form">
+      {{!-- if burgers devour === false --}}
+      <div class="col-md-6 border-right">
+        <h2>Burgers awaiting consumption!</h2>
+        <br>
+        <ul class="list-group" id="notdevoured">
+          {{#each burgers}}
+          {{#unless devoured}}
+          <li class="list-group-item" id={{id}}>{{id}}. {{burger_name}}</li>
+          {{/unless}}
+          {{/each}}
+        </ul>
+      </div>
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
+      {{!-- if burgers devour === false --}}
+      <div class="col-md-4">
+        <h2>Burgers in my belly!</h2>
+        <br>
+        <ul class="list-group" id="devoured">
+          {{#each burgers}}
+          {{#if devoured}}
+          <li class="list-group-item">{{burger_name}}</li>
+          {{/if}}
+          {{/each}}
+        </ul>
+      </div>
+    </div>
+          
+    <br><br><br>
 
-  <div class="form-group">
-    <label for="slee">Devoured?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Devoured!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
+    <div class="row justify-content-center">
+      <div class="col-6"> 
+        <form class="form-inline">
+          <div class="form-group mx-sm-4 mb-2">
+            <input type="input" class="form-control" id="inputBurger" placeholder="Enter New Burger Name">
+            {{!-- <label for="inputBurger" class="sr-only">Add a New Burger</label> --}}
+          </div>
+          <button type="submit" class="btn btn-primary mb-2">Add a New Burger</button>
+        </form>
+      </div>
+    </div>
+  </div>justify-content-center
+</section>
