completed addNewBurger functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,19 +37,19 @@
         </ul>
       </div>
     </div>
-          
+
     <br><br><br>
 
     <div class="row justify-content-center">
-      <div class="col-6"> 
+      <div class="col-6">
         <form class="form-inline">
           <div class="form-group mx-sm-4 mb-2">
             <input type="input" class="form-control" id="inputBurger" placeholder="Enter New Burger Name">
             {{!-- <label for="inputBurger" class="sr-only">Add a New Burger</label> --}}
           </div>
-          <button type="submit" class="btn btn-primary mb-2">Add a New Burger</button>
+          <button id="buttonAddBurger" type="submit" class="btn btn-primary mb-2">Add a New Burger</button>
         </form>
       </div>
     </div>
-  </div>justify-content-center
+  </div>
 </section>
