updated H1 to Jumbotron

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,15 @@
 <br><br><br><br>
-<header class="container d-flex justify-content-center">
-  <h1>Eat - DA - Burger</h1>
-</header>
 
-<br><br><br><br>
+
+<div class="jumbotron text-center">
+  <h1 class="display-4">Eat - DA - Burger</h1>
+  <hr class="my-4">
+</div>
+
+
+
+
+{{!-- <br><br><br><br> --}}
 
 
 <section class="container">
@@ -11,7 +17,7 @@
     <div class="row justify-content-center">
 
 
-      {{!-- if burgers devour === false --}}
+      {{!-- List of undevoured burgers --}}
       <div class="col-md-6 border-right">
         <h2>Burgers awaiting consumption!</h2>
         <br>
@@ -24,7 +30,7 @@
         </ul>
       </div>
 
-      {{!-- if burgers devour === false --}}
+      {{!-- List of devroured burgers --}}
       <div class="col-md-4">
         <h2>Burgers in my belly!</h2>
         <br>
