--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		{{!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> --}}
+		{{!-- <script src="https://kit.fontawesome.com/9098a73970.js" crossorigin="anonymous"></script> --}}
 		<title>MVC Burgers</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/js/burgers.js"></script>
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+		
 		<link rel="stylesheet" href="/css/styles.css">
+
 	</head>
 	<body>
 		{{{ body }}}
